Feb 21: User page frame created; setting page created which shows user info (grabbed from firebase) and allows user to update password; Restrict access of protected routes for non-authenticated users(home,settings,account)

--- a/ins/src/index.css
+++ b/ins/src/index.css
@@ -15,3 +15,18 @@ code {
 #pw-forgot-page{
   margin-top: 12%;
 }
+
+#pw-update{
+  margin-top: 12%;
+}
+
+#side-nav{
+  position: fixed;
+  width: 320px;
+}
+
+#main-content{
+  margin-left: 320px;
+  padding: 0px 10px;
+
+}
